plugins {
    id 'org.beryx.jlink' version '2.26.0'
    id 'java'
    id 'application'
}

java {
    modularity.inferModulePath = true
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(21))
    }
}

tasks.named('run') {
    doFirst {
        jvmArgs = [
            "--module-path", classpath.asPath, 
            "--add-modules", "javafx.controls,javafx.fxml,javafx.web"
        ]
    }
}

application {
    mainModule = 'com.example.appcore'
    mainClass = 'com.example.appcore.utils.RequestHandler'
}

jlink {
    launcher {
        jvmArgs = ['--add-modules', 'com.example.appcore']
        name = "appCore"
    }
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    jpackage {
        imageName = 'app_core'
        skipInstaller = true
        outputDir = "./../../build"
    }
}